css fix align

--- a/media/com_templates/css/admin-templates-default.css
+++ b/media/com_templates/css/admin-templates-default.css
@@ -70,16 +70,16 @@
 
 #jform_show_core {
 	display: inline;
-	margin-right: 7em;
+	margin-right: 8em;
 }
 
 #jform_show_diff {
 	display: inline;
-	margin-right: 4.5em;
+	margin-right: 5.5em;
 }
 
 .switcher-label-0, .switcher-label-1{
-	min-width: 4.5em;
-	max-width: 4.5em;
+	min-width: 5em;
+	max-width: 5em;
 	text-align: left;
 }
